// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Final form input component Should render correctly 1`] = `
<VmSnapshotForm
  descriptionRequired={false}
  hideName={false}
  nameRequired={false}
  onCancel={[MockFunction]}
  onSubmit={[MockFunction]}
  showMemorySwitch={true}
  validateOnMount={true}
>
  <ReactFinalForm
    initialValues={
      Object {
        "snap_memory": false,
      }
    }
    onSubmit={[MockFunction]}
    render={[Function]}
  >
    <Form
      bsClass="form"
      componentClass="form"
      horizontal={true}
      inline={false}
    >
      <form
        className="form-horizontal"
      >
        <Row
          bsClass="row"
          componentClass="div"
        >
          <div
            className="row"
          >
            <Col
              bsClass="col"
              componentClass="div"
              xs={12}
            >
              <div
                className="col-xs-12"
              >
                <Field
                  format={[Function]}
                  id="name"
                  name="name"
                  parse={[Function]}
                  render={[Function]}
                  validate={false}
                >
                  <FinalFormField
                    input={
                      Object {
                        "name": "name",
                        "onBlur": [Function],
                        "onChange": [Function],
                        "onFocus": [Function],
                        "value": "",
                      }
                    }
                    label="Name"
                    meta={
                      Object {
                        "active": false,
                        "data": Object {},
                        "dirty": false,
                        "dirtySinceLastSubmit": false,
                        "error": undefined,
                        "initial": undefined,
                        "invalid": false,
                        "pristine": true,
                        "submitError": undefined,
                        "submitFailed": false,
                        "submitSucceeded": false,
                        "submitting": false,
                        "touched": false,
                        "valid": true,
                        "visited": false,
                      }
                    }
                    validateOnMount={true}
                  >
                    <FinalFormComponent
                      clearable={false}
                      componentType="textfield"
                      disabled={false}
                      input={
                        Object {
                          "name": "name",
                          "onBlur": [Function],
                          "onChange": [Function],
                          "onFocus": [Function],
                          "value": "",
                        }
                      }
                      inputColumnSize={8}
                      label="Name"
                      labelColumnSize={2}
                      labelKey="label"
                      meta={
                        Object {
                          "active": false,
                          "data": Object {},
                          "dirty": false,
                          "dirtySinceLastSubmit": false,
                          "error": undefined,
                          "initial": undefined,
                          "invalid": false,
                          "pristine": true,
                          "submitError": undefined,
                          "submitFailed": false,
                          "submitSucceeded": false,
                          "submitting": false,
                          "touched": false,
                          "valid": true,
                          "visited": false,
                        }
                      }
                      multi={false}
                      placeholder=""
                      searchable={false}
                      simpleValue={true}
                      validateOnMount={true}
                      valueKey="value"
                    >
                      <FormGroup
                        bsClass="form-group"
                        validationState={null}
                      >
                        <div
                          className="form-group"
                        >
                          <Col
                            bsClass="col"
                            className="control-label"
                            componentClass="label"
                            xs={2}
                          >
                            <label
                              className="control-label col-xs-2"
                            >
                              Name
                            </label>
                          </Col>
                          <Col
                            bsClass="col"
                            componentClass="div"
                            xs={8}
                          >
                            <div
                              className="col-xs-8"
                            >
                              <FormControl
                                bsClass="form-control"
                                componentClass="input"
                                disabled={false}
                                id="name"
                                name="name"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onFocus={[Function]}
                                placeholder=""
                                type="text"
                                value=""
                              >
                                <input
                                  className="form-control"
                                  disabled={false}
                                  id="name"
                                  name="name"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  onFocus={[Function]}
                                  placeholder=""
                                  type="text"
                                  value=""
                                />
                              </FormControl>
                            </div>
                          </Col>
                        </div>
                      </FormGroup>
                    </FinalFormComponent>
                  </FinalFormField>
                </Field>
              </div>
            </Col>
            <Col
              bsClass="col"
              componentClass="div"
              xs={12}
            >
              <div
                className="col-xs-12"
              >
                <Field
                  format={[Function]}
                  id="description"
                  name="description"
                  parse={[Function]}
                  render={[Function]}
                  validate={false}
                >
                  <FinalFormTextArea
                    input={
                      Object {
                        "name": "description",
                        "onBlur": [Function],
                        "onChange": [Function],
                        "onFocus": [Function],
                        "value": "",
                      }
                    }
                    label="Description"
                    meta={
                      Object {
                        "active": false,
                        "data": Object {},
                        "dirty": false,
                        "dirtySinceLastSubmit": false,
                        "error": undefined,
                        "initial": undefined,
                        "invalid": false,
                        "pristine": true,
                        "submitError": undefined,
                        "submitFailed": false,
                        "submitSucceeded": false,
                        "submitting": false,
                        "touched": false,
                        "valid": true,
                        "visited": false,
                      }
                    }
                    validateOnMount={true}
                  >
                    <FinalFormComponent
                      clearable={false}
                      componentType="textarea"
                      disabled={false}
                      input={
                        Object {
                          "name": "description",
                          "onBlur": [Function],
                          "onChange": [Function],
                          "onFocus": [Function],
                          "value": "",
                        }
                      }
                      inputColumnSize={8}
                      label="Description"
                      labelColumnSize={2}
                      labelKey="label"
                      meta={
                        Object {
                          "active": false,
                          "data": Object {},
                          "dirty": false,
                          "dirtySinceLastSubmit": false,
                          "error": undefined,
                          "initial": undefined,
                          "invalid": false,
                          "pristine": true,
                          "submitError": undefined,
                          "submitFailed": false,
                          "submitSucceeded": false,
                          "submitting": false,
                          "touched": false,
                          "valid": true,
                          "visited": false,
                        }
                      }
                      multi={false}
                      placeholder=""
                      searchable={false}
                      simpleValue={true}
                      validateOnMount={true}
                      valueKey="value"
                    >
                      <FormGroup
                        bsClass="form-group"
                        validationState={null}
                      >
                        <div
                          className="form-group"
                        >
                          <Col
                            bsClass="col"
                            className="control-label"
                            componentClass="label"
                            xs={2}
                          >
                            <label
                              className="control-label col-xs-2"
                            >
                              Description
                            </label>
                          </Col>
                          <Col
                            bsClass="col"
                            componentClass="div"
                            xs={8}
                          >
                            <div
                              className="col-xs-8"
                            >
                              <FormControl
                                bsClass="form-control"
                                componentClass="textarea"
                                disabled={false}
                                id="description"
                                name="description"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onFocus={[Function]}
                                placeholder=""
                                value=""
                              >
                                <textarea
                                  className="form-control"
                                  disabled={false}
                                  id="description"
                                  name="description"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  onFocus={[Function]}
                                  placeholder=""
                                  value=""
                                />
                              </FormControl>
                            </div>
                          </Col>
                        </div>
                      </FormGroup>
                    </FinalFormComponent>
                  </FinalFormTextArea>
                </Field>
              </div>
            </Col>
            <Col
              bsClass="col"
              componentClass="div"
              xs={12}
            >
              <div
                className="col-xs-12"
              >
                <Field
                  component={[Function]}
                  format={[Function]}
                  id="snap_memory"
                  label="Snapshot VM memory"
                  name="snap_memory"
                  offText="No"
                  onText="Yes"
                  parse={[Function]}
                >
                  <FinalFormSwitch
                    id="snap_memory"
                    input={
                      Object {
                        "name": "snap_memory",
                        "onBlur": [Function],
                        "onChange": [Function],
                        "onFocus": [Function],
                        "value": false,
                      }
                    }
                    label="Snapshot VM memory"
                    meta={
                      Object {
                        "active": false,
                        "data": Object {},
                        "dirty": false,
                        "dirtySinceLastSubmit": false,
                        "error": undefined,
                        "initial": false,
                        "invalid": false,
                        "pristine": true,
                        "submitError": undefined,
                        "submitFailed": false,
                        "submitSucceeded": false,
                        "submitting": false,
                        "touched": false,
                        "valid": true,
                        "visited": false,
                      }
                    }
                    offText="No"
                    onText="Yes"
                  >
                    <FinalFormComponent
                      clearable={false}
                      componentType="switch"
                      disabled={false}
                      id="snap_memory"
                      input={
                        Object {
                          "name": "snap_memory",
                          "onBlur": [Function],
                          "onChange": [Function],
                          "onFocus": [Function],
                          "value": false,
                        }
                      }
                      inputColumnSize={8}
                      label="Snapshot VM memory"
                      labelColumnSize={2}
                      labelKey="label"
                      meta={
                        Object {
                          "active": false,
                          "data": Object {},
                          "dirty": false,
                          "dirtySinceLastSubmit": false,
                          "error": undefined,
                          "initial": false,
                          "invalid": false,
                          "pristine": true,
                          "submitError": undefined,
                          "submitFailed": false,
                          "submitSucceeded": false,
                          "submitting": false,
                          "touched": false,
                          "valid": true,
                          "visited": false,
                        }
                      }
                      multi={false}
                      offText="No"
                      onText="Yes"
                      placeholder=""
                      searchable={false}
                      simpleValue={true}
                      validateOnMount={false}
                      valueKey="value"
                    >
                      <FormGroup
                        bsClass="form-group"
                        validationState={null}
                      >
                        <div
                          className="form-group"
                        >
                          <Col
                            bsClass="col"
                            className="control-label"
                            componentClass="label"
                            xs={2}
                          >
                            <label
                              className="control-label col-xs-2"
                            >
                              Snapshot VM memory
                            </label>
                          </Col>
                          <Col
                            bsClass="col"
                            componentClass="div"
                            xs={8}
                          >
                            <div
                              className="col-xs-8"
                            >
                              <Switch
                                animate={true}
                                baseClass="bootstrap-switch"
                                bsSize={null}
                                clearable={false}
                                defaultValue={true}
                                disabled={false}
                                handleWidth="auto"
                                id="snap_memory"
                                inverse={false}
                                label="Snapshot VM memory"
                                labelKey="label"
                                labelText=" "
                                labelWidth="auto"
                                multi={false}
                                name="snap_memory"
                                offColor="default"
                                offText="No"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onColor="primary"
                                onFocus={[Function]}
                                onText="Yes"
                                options={Array []}
                                placeholder=""
                                readonly={false}
                                searchable={false}
                                tristate={false}
                                value={false}
                                valueKey="value"
                                wrapperClass="wrapper"
                              >
                                <div
                                  className="bootstrap-switch wrapper bootstrap-switch-off bootstrap-switch-snap_memory"
                                  onBlur={[Function]}
                                  onFocus={[Function]}
                                  onKeyDown={[Function]}
                                  style={
                                    Object {
                                      "width": "auto",
                                    }
                                  }
                                  tabIndex="0"
                                >
                                  <div
                                    className="bootstrap-switch-container"
                                    style={
                                      Object {
                                        "marginLeft": -0,
                                        "width": "auto",
                                      }
                                    }
                                  >
                                    <span
                                      className="bootstrap-switch-handle-on bootstrap-switch-primary"
                                      onClick={[Function]}
                                      style={
                                        Object {
                                          "width": 0,
                                        }
                                      }
                                    >
                                      Yes
                                    </span>
                                    <span
                                      className="bootstrap-switch-label"
                                      onMouseDown={[Function]}
                                      onMouseLeave={[Function]}
                                      onMouseMove={[Function]}
                                      onMouseUp={[Function]}
                                      onTouchEnd={[Function]}
                                      onTouchMove={[Function]}
                                      onTouchStart={[Function]}
                                      style={
                                        Object {
                                          "width": 0,
                                        }
                                      }
                                    >
                                       
                                    </span>
                                    <span
                                      className="bootstrap-switch-handle-off bootstrap-switch-default"
                                      onClick={[Function]}
                                      style={
                                        Object {
                                          "width": 0,
                                        }
                                      }
                                    >
                                      No
                                    </span>
                                  </div>
                                </div>
                              </Switch>
                            </div>
                          </Col>
                        </div>
                      </FormGroup>
                    </FinalFormComponent>
                  </FinalFormSwitch>
                </Field>
              </div>
            </Col>
            <Col
              bsClass="col"
              componentClass="div"
              xs={12}
            >
              <div
                className="col-xs-12"
              >
                <hr />
                <ButtonGroup
                  block={false}
                  bsClass="btn-group"
                  className="pull-right"
                  justified={false}
                  vertical={false}
                >
                  <div
                    className="pull-right btn-group"
                  >
                    <Button
                      active={false}
                      block={false}
                      bsClass="btn"
                      bsStyle="primary"
                      disabled={false}
                      id="snap-form-submit"
                      onClick={[Function]}
                    >
                      <button
                        className="btn btn-primary"
                        disabled={false}
                        id="snap-form-submit"
                        onClick={[Function]}
                        type="button"
                      >
                        Create
                      </button>
                    </Button>
                    <Button
                      active={false}
                      block={false}
                      bsClass="btn"
                      bsStyle="default"
                      disabled={false}
                      id="snap-form-cancel"
                      onClick={[MockFunction]}
                    >
                      <button
                        className="btn btn-default"
                        disabled={false}
                        id="snap-form-cancel"
                        onClick={[MockFunction]}
                        type="button"
                      >
                        Cancel
                      </button>
                    </Button>
                  </div>
                </ButtonGroup>
              </div>
            </Col>
          </div>
        </Row>
      </form>
    </Form>
  </ReactFinalForm>
</VmSnapshotForm>
`;

exports[`Final form input component Should render with description required 1`] = `
<VmSnapshotForm
  descriptionRequired={true}
  hideName={false}
  nameRequired={false}
  onCancel={[MockFunction]}
  onSubmit={[MockFunction]}
  showMemorySwitch={true}
  validateOnMount={true}
>
  <ReactFinalForm
    initialValues={
      Object {
        "snap_memory": false,
      }
    }
    onSubmit={[MockFunction]}
    render={[Function]}
  >
    <Form
      bsClass="form"
      componentClass="form"
      horizontal={true}
      inline={false}
    >
      <form
        className="form-horizontal"
      >
        <Row
          bsClass="row"
          componentClass="div"
        >
          <div
            className="row"
          >
            <Col
              bsClass="col"
              componentClass="div"
              xs={12}
            >
              <div
                className="col-xs-12"
              >
                <Field
                  format={[Function]}
                  id="name"
                  name="name"
                  parse={[Function]}
                  render={[Function]}
                  validate={false}
                >
                  <FinalFormField
                    input={
                      Object {
                        "name": "name",
                        "onBlur": [Function],
                        "onChange": [Function],
                        "onFocus": [Function],
                        "value": "",
                      }
                    }
                    label="Name"
                    meta={
                      Object {
                        "active": false,
                        "data": Object {},
                        "dirty": false,
                        "dirtySinceLastSubmit": false,
                        "error": undefined,
                        "initial": undefined,
                        "invalid": false,
                        "pristine": true,
                        "submitError": undefined,
                        "submitFailed": false,
                        "submitSucceeded": false,
                        "submitting": false,
                        "touched": false,
                        "valid": true,
                        "visited": false,
                      }
                    }
                    validateOnMount={true}
                  >
                    <FinalFormComponent
                      clearable={false}
                      componentType="textfield"
                      disabled={false}
                      input={
                        Object {
                          "name": "name",
                          "onBlur": [Function],
                          "onChange": [Function],
                          "onFocus": [Function],
                          "value": "",
                        }
                      }
                      inputColumnSize={8}
                      label="Name"
                      labelColumnSize={2}
                      labelKey="label"
                      meta={
                        Object {
                          "active": false,
                          "data": Object {},
                          "dirty": false,
                          "dirtySinceLastSubmit": false,
                          "error": undefined,
                          "initial": undefined,
                          "invalid": false,
                          "pristine": true,
                          "submitError": undefined,
                          "submitFailed": false,
                          "submitSucceeded": false,
                          "submitting": false,
                          "touched": false,
                          "valid": true,
                          "visited": false,
                        }
                      }
                      multi={false}
                      placeholder=""
                      searchable={false}
                      simpleValue={true}
                      validateOnMount={true}
                      valueKey="value"
                    >
                      <FormGroup
                        bsClass="form-group"
                        validationState={null}
                      >
                        <div
                          className="form-group"
                        >
                          <Col
                            bsClass="col"
                            className="control-label"
                            componentClass="label"
                            xs={2}
                          >
                            <label
                              className="control-label col-xs-2"
                            >
                              Name
                            </label>
                          </Col>
                          <Col
                            bsClass="col"
                            componentClass="div"
                            xs={8}
                          >
                            <div
                              className="col-xs-8"
                            >
                              <FormControl
                                bsClass="form-control"
                                componentClass="input"
                                disabled={false}
                                id="name"
                                name="name"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onFocus={[Function]}
                                placeholder=""
                                type="text"
                                value=""
                              >
                                <input
                                  className="form-control"
                                  disabled={false}
                                  id="name"
                                  name="name"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  onFocus={[Function]}
                                  placeholder=""
                                  type="text"
                                  value=""
                                />
                              </FormControl>
                            </div>
                          </Col>
                        </div>
                      </FormGroup>
                    </FinalFormComponent>
                  </FinalFormField>
                </Field>
              </div>
            </Col>
            <Col
              bsClass="col"
              componentClass="div"
              xs={12}
            >
              <div
                className="col-xs-12"
              >
                <Field
                  format={[Function]}
                  id="description"
                  name="description"
                  parse={[Function]}
                  render={[Function]}
                  validate={[Function]}
                >
                  <FinalFormTextArea
                    input={
                      Object {
                        "name": "description",
                        "onBlur": [Function],
                        "onChange": [Function],
                        "onFocus": [Function],
                        "value": "",
                      }
                    }
                    label="Description"
                    meta={
                      Object {
                        "active": false,
                        "data": Object {},
                        "dirty": false,
                        "dirtySinceLastSubmit": false,
                        "error": "Required",
                        "initial": undefined,
                        "invalid": true,
                        "pristine": true,
                        "submitError": undefined,
                        "submitFailed": false,
                        "submitSucceeded": false,
                        "submitting": false,
                        "touched": false,
                        "valid": false,
                        "visited": false,
                      }
                    }
                    validateOnMount={true}
                  >
                    <FinalFormComponent
                      clearable={false}
                      componentType="textarea"
                      disabled={false}
                      input={
                        Object {
                          "name": "description",
                          "onBlur": [Function],
                          "onChange": [Function],
                          "onFocus": [Function],
                          "value": "",
                        }
                      }
                      inputColumnSize={8}
                      label="Description"
                      labelColumnSize={2}
                      labelKey="label"
                      meta={
                        Object {
                          "active": false,
                          "data": Object {},
                          "dirty": false,
                          "dirtySinceLastSubmit": false,
                          "error": "Required",
                          "initial": undefined,
                          "invalid": true,
                          "pristine": true,
                          "submitError": undefined,
                          "submitFailed": false,
                          "submitSucceeded": false,
                          "submitting": false,
                          "touched": false,
                          "valid": false,
                          "visited": false,
                        }
                      }
                      multi={false}
                      placeholder=""
                      searchable={false}
                      simpleValue={true}
                      validateOnMount={true}
                      valueKey="value"
                    >
                      <FormGroup
                        bsClass="form-group"
                        validationState="error"
                      >
                        <div
                          className="form-group has-error"
                        >
                          <Col
                            bsClass="col"
                            className="control-label"
                            componentClass="label"
                            xs={2}
                          >
                            <label
                              className="control-label col-xs-2"
                            >
                              Description
                            </label>
                          </Col>
                          <Col
                            bsClass="col"
                            componentClass="div"
                            xs={8}
                          >
                            <div
                              className="col-xs-8"
                            >
                              <FormControl
                                bsClass="form-control"
                                componentClass="textarea"
                                disabled={false}
                                id="description"
                                name="description"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onFocus={[Function]}
                                placeholder=""
                                value=""
                              >
                                <textarea
                                  className="form-control"
                                  disabled={false}
                                  id="description"
                                  name="description"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  onFocus={[Function]}
                                  placeholder=""
                                  value=""
                                />
                              </FormControl>
                              <HelpBlock
                                bsClass="help-block"
                              >
                                <span
                                  className="help-block"
                                >
                                  Required
                                </span>
                              </HelpBlock>
                            </div>
                          </Col>
                        </div>
                      </FormGroup>
                    </FinalFormComponent>
                  </FinalFormTextArea>
                </Field>
              </div>
            </Col>
            <Col
              bsClass="col"
              componentClass="div"
              xs={12}
            >
              <div
                className="col-xs-12"
              >
                <Field
                  component={[Function]}
                  format={[Function]}
                  id="snap_memory"
                  label="Snapshot VM memory"
                  name="snap_memory"
                  offText="No"
                  onText="Yes"
                  parse={[Function]}
                >
                  <FinalFormSwitch
                    id="snap_memory"
                    input={
                      Object {
                        "name": "snap_memory",
                        "onBlur": [Function],
                        "onChange": [Function],
                        "onFocus": [Function],
                        "value": false,
                      }
                    }
                    label="Snapshot VM memory"
                    meta={
                      Object {
                        "active": false,
                        "data": Object {},
                        "dirty": false,
                        "dirtySinceLastSubmit": false,
                        "error": undefined,
                        "initial": false,
                        "invalid": false,
                        "pristine": true,
                        "submitError": undefined,
                        "submitFailed": false,
                        "submitSucceeded": false,
                        "submitting": false,
                        "touched": false,
                        "valid": true,
                        "visited": false,
                      }
                    }
                    offText="No"
                    onText="Yes"
                  >
                    <FinalFormComponent
                      clearable={false}
                      componentType="switch"
                      disabled={false}
                      id="snap_memory"
                      input={
                        Object {
                          "name": "snap_memory",
                          "onBlur": [Function],
                          "onChange": [Function],
                          "onFocus": [Function],
                          "value": false,
                        }
                      }
                      inputColumnSize={8}
                      label="Snapshot VM memory"
                      labelColumnSize={2}
                      labelKey="label"
                      meta={
                        Object {
                          "active": false,
                          "data": Object {},
                          "dirty": false,
                          "dirtySinceLastSubmit": false,
                          "error": undefined,
                          "initial": false,
                          "invalid": false,
                          "pristine": true,
                          "submitError": undefined,
                          "submitFailed": false,
                          "submitSucceeded": false,
                          "submitting": false,
                          "touched": false,
                          "valid": true,
                          "visited": false,
                        }
                      }
                      multi={false}
                      offText="No"
                      onText="Yes"
                      placeholder=""
                      searchable={false}
                      simpleValue={true}
                      validateOnMount={false}
                      valueKey="value"
                    >
                      <FormGroup
                        bsClass="form-group"
                        validationState={null}
                      >
                        <div
                          className="form-group"
                        >
                          <Col
                            bsClass="col"
                            className="control-label"
                            componentClass="label"
                            xs={2}
                          >
                            <label
                              className="control-label col-xs-2"
                            >
                              Snapshot VM memory
                            </label>
                          </Col>
                          <Col
                            bsClass="col"
                            componentClass="div"
                            xs={8}
                          >
                            <div
                              className="col-xs-8"
                            >
                              <Switch
                                animate={true}
                                baseClass="bootstrap-switch"
                                bsSize={null}
                                clearable={false}
                                defaultValue={true}
                                disabled={false}
                                handleWidth="auto"
                                id="snap_memory"
                                inverse={false}
                                label="Snapshot VM memory"
                                labelKey="label"
                                labelText=" "
                                labelWidth="auto"
                                multi={false}
                                name="snap_memory"
                                offColor="default"
                                offText="No"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onColor="primary"
                                onFocus={[Function]}
                                onText="Yes"
                                options={Array []}
                                placeholder=""
                                readonly={false}
                                searchable={false}
                                tristate={false}
                                value={false}
                                valueKey="value"
                                wrapperClass="wrapper"
                              >
                                <div
                                  className="bootstrap-switch wrapper bootstrap-switch-off bootstrap-switch-snap_memory bootstrap-switch-animate"
                                  onBlur={[Function]}
                                  onFocus={[Function]}
                                  onKeyDown={[Function]}
                                  style={
                                    Object {
                                      "width": "auto",
                                    }
                                  }
                                  tabIndex="0"
                                >
                                  <div
                                    className="bootstrap-switch-container"
                                    style={
                                      Object {
                                        "marginLeft": -0,
                                        "width": "auto",
                                      }
                                    }
                                  >
                                    <span
                                      className="bootstrap-switch-handle-on bootstrap-switch-primary"
                                      onClick={[Function]}
                                      style={
                                        Object {
                                          "width": 0,
                                        }
                                      }
                                    >
                                      Yes
                                    </span>
                                    <span
                                      className="bootstrap-switch-label"
                                      onMouseDown={[Function]}
                                      onMouseLeave={[Function]}
                                      onMouseMove={[Function]}
                                      onMouseUp={[Function]}
                                      onTouchEnd={[Function]}
                                      onTouchMove={[Function]}
                                      onTouchStart={[Function]}
                                      style={
                                        Object {
                                          "width": 0,
                                        }
                                      }
                                    >
                                       
                                    </span>
                                    <span
                                      className="bootstrap-switch-handle-off bootstrap-switch-default"
                                      onClick={[Function]}
                                      style={
                                        Object {
                                          "width": 0,
                                        }
                                      }
                                    >
                                      No
                                    </span>
                                  </div>
                                </div>
                              </Switch>
                            </div>
                          </Col>
                        </div>
                      </FormGroup>
                    </FinalFormComponent>
                  </FinalFormSwitch>
                </Field>
              </div>
            </Col>
            <Col
              bsClass="col"
              componentClass="div"
              xs={12}
            >
              <div
                className="col-xs-12"
              >
                <hr />
                <ButtonGroup
                  block={false}
                  bsClass="btn-group"
                  className="pull-right"
                  justified={false}
                  vertical={false}
                >
                  <div
                    className="pull-right btn-group"
                  >
                    <Button
                      active={false}
                      block={false}
                      bsClass="btn"
                      bsStyle="primary"
                      disabled={true}
                      id="snap-form-submit"
                      onClick={[Function]}
                    >
                      <button
                        className="btn btn-primary"
                        disabled={true}
                        id="snap-form-submit"
                        onClick={[Function]}
                        type="button"
                      >
                        Create
                      </button>
                    </Button>
                    <Button
                      active={false}
                      block={false}
                      bsClass="btn"
                      bsStyle="default"
                      disabled={false}
                      id="snap-form-cancel"
                      onClick={[MockFunction]}
                    >
                      <button
                        className="btn btn-default"
                        disabled={false}
                        id="snap-form-cancel"
                        onClick={[MockFunction]}
                        type="button"
                      >
                        Cancel
                      </button>
                    </Button>
                  </div>
                </ButtonGroup>
              </div>
            </Col>
          </div>
        </Row>
      </form>
    </Form>
  </ReactFinalForm>
</VmSnapshotForm>
`;

exports[`Final form input component Should render with name required 1`] = `
<VmSnapshotForm
  descriptionRequired={false}
  hideName={false}
  nameRequired={true}
  onCancel={[MockFunction]}
  onSubmit={[MockFunction]}
  showMemorySwitch={true}
  validateOnMount={true}
>
  <ReactFinalForm
    initialValues={
      Object {
        "snap_memory": false,
      }
    }
    onSubmit={[MockFunction]}
    render={[Function]}
  >
    <Form
      bsClass="form"
      componentClass="form"
      horizontal={true}
      inline={false}
    >
      <form
        className="form-horizontal"
      >
        <Row
          bsClass="row"
          componentClass="div"
        >
          <div
            className="row"
          >
            <Col
              bsClass="col"
              componentClass="div"
              xs={12}
            >
              <div
                className="col-xs-12"
              >
                <Field
                  format={[Function]}
                  id="name"
                  name="name"
                  parse={[Function]}
                  render={[Function]}
                  validate={[Function]}
                >
                  <FinalFormField
                    input={
                      Object {
                        "name": "name",
                        "onBlur": [Function],
                        "onChange": [Function],
                        "onFocus": [Function],
                        "value": "",
                      }
                    }
                    label="Name"
                    meta={
                      Object {
                        "active": false,
                        "data": Object {},
                        "dirty": false,
                        "dirtySinceLastSubmit": false,
                        "error": "Required",
                        "initial": undefined,
                        "invalid": true,
                        "pristine": true,
                        "submitError": undefined,
                        "submitFailed": false,
                        "submitSucceeded": false,
                        "submitting": false,
                        "touched": false,
                        "valid": false,
                        "visited": false,
                      }
                    }
                    validateOnMount={true}
                  >
                    <FinalFormComponent
                      clearable={false}
                      componentType="textfield"
                      disabled={false}
                      input={
                        Object {
                          "name": "name",
                          "onBlur": [Function],
                          "onChange": [Function],
                          "onFocus": [Function],
                          "value": "",
                        }
                      }
                      inputColumnSize={8}
                      label="Name"
                      labelColumnSize={2}
                      labelKey="label"
                      meta={
                        Object {
                          "active": false,
                          "data": Object {},
                          "dirty": false,
                          "dirtySinceLastSubmit": false,
                          "error": "Required",
                          "initial": undefined,
                          "invalid": true,
                          "pristine": true,
                          "submitError": undefined,
                          "submitFailed": false,
                          "submitSucceeded": false,
                          "submitting": false,
                          "touched": false,
                          "valid": false,
                          "visited": false,
                        }
                      }
                      multi={false}
                      placeholder=""
                      searchable={false}
                      simpleValue={true}
                      validateOnMount={true}
                      valueKey="value"
                    >
                      <FormGroup
                        bsClass="form-group"
                        validationState="error"
                      >
                        <div
                          className="form-group has-error"
                        >
                          <Col
                            bsClass="col"
                            className="control-label"
                            componentClass="label"
                            xs={2}
                          >
                            <label
                              className="control-label col-xs-2"
                            >
                              Name
                            </label>
                          </Col>
                          <Col
                            bsClass="col"
                            componentClass="div"
                            xs={8}
                          >
                            <div
                              className="col-xs-8"
                            >
                              <FormControl
                                bsClass="form-control"
                                componentClass="input"
                                disabled={false}
                                id="name"
                                name="name"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onFocus={[Function]}
                                placeholder=""
                                type="text"
                                value=""
                              >
                                <input
                                  className="form-control"
                                  disabled={false}
                                  id="name"
                                  name="name"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  onFocus={[Function]}
                                  placeholder=""
                                  type="text"
                                  value=""
                                />
                              </FormControl>
                              <HelpBlock
                                bsClass="help-block"
                              >
                                <span
                                  className="help-block"
                                >
                                  Required
                                </span>
                              </HelpBlock>
                            </div>
                          </Col>
                        </div>
                      </FormGroup>
                    </FinalFormComponent>
                  </FinalFormField>
                </Field>
              </div>
            </Col>
            <Col
              bsClass="col"
              componentClass="div"
              xs={12}
            >
              <div
                className="col-xs-12"
              >
                <Field
                  format={[Function]}
                  id="description"
                  name="description"
                  parse={[Function]}
                  render={[Function]}
                  validate={false}
                >
                  <FinalFormTextArea
                    input={
                      Object {
                        "name": "description",
                        "onBlur": [Function],
                        "onChange": [Function],
                        "onFocus": [Function],
                        "value": "",
                      }
                    }
                    label="Description"
                    meta={
                      Object {
                        "active": false,
                        "data": Object {},
                        "dirty": false,
                        "dirtySinceLastSubmit": false,
                        "error": undefined,
                        "initial": undefined,
                        "invalid": false,
                        "pristine": true,
                        "submitError": undefined,
                        "submitFailed": false,
                        "submitSucceeded": false,
                        "submitting": false,
                        "touched": false,
                        "valid": true,
                        "visited": false,
                      }
                    }
                    validateOnMount={true}
                  >
                    <FinalFormComponent
                      clearable={false}
                      componentType="textarea"
                      disabled={false}
                      input={
                        Object {
                          "name": "description",
                          "onBlur": [Function],
                          "onChange": [Function],
                          "onFocus": [Function],
                          "value": "",
                        }
                      }
                      inputColumnSize={8}
                      label="Description"
                      labelColumnSize={2}
                      labelKey="label"
                      meta={
                        Object {
                          "active": false,
                          "data": Object {},
                          "dirty": false,
                          "dirtySinceLastSubmit": false,
                          "error": undefined,
                          "initial": undefined,
                          "invalid": false,
                          "pristine": true,
                          "submitError": undefined,
                          "submitFailed": false,
                          "submitSucceeded": false,
                          "submitting": false,
                          "touched": false,
                          "valid": true,
                          "visited": false,
                        }
                      }
                      multi={false}
                      placeholder=""
                      searchable={false}
                      simpleValue={true}
                      validateOnMount={true}
                      valueKey="value"
                    >
                      <FormGroup
                        bsClass="form-group"
                        validationState={null}
                      >
                        <div
                          className="form-group"
                        >
                          <Col
                            bsClass="col"
                            className="control-label"
                            componentClass="label"
                            xs={2}
                          >
                            <label
                              className="control-label col-xs-2"
                            >
                              Description
                            </label>
                          </Col>
                          <Col
                            bsClass="col"
                            componentClass="div"
                            xs={8}
                          >
                            <div
                              className="col-xs-8"
                            >
                              <FormControl
                                bsClass="form-control"
                                componentClass="textarea"
                                disabled={false}
                                id="description"
                                name="description"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onFocus={[Function]}
                                placeholder=""
                                value=""
                              >
                                <textarea
                                  className="form-control"
                                  disabled={false}
                                  id="description"
                                  name="description"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  onFocus={[Function]}
                                  placeholder=""
                                  value=""
                                />
                              </FormControl>
                            </div>
                          </Col>
                        </div>
                      </FormGroup>
                    </FinalFormComponent>
                  </FinalFormTextArea>
                </Field>
              </div>
            </Col>
            <Col
              bsClass="col"
              componentClass="div"
              xs={12}
            >
              <div
                className="col-xs-12"
              >
                <Field
                  component={[Function]}
                  format={[Function]}
                  id="snap_memory"
                  label="Snapshot VM memory"
                  name="snap_memory"
                  offText="No"
                  onText="Yes"
                  parse={[Function]}
                >
                  <FinalFormSwitch
                    id="snap_memory"
                    input={
                      Object {
                        "name": "snap_memory",
                        "onBlur": [Function],
                        "onChange": [Function],
                        "onFocus": [Function],
                        "value": false,
                      }
                    }
                    label="Snapshot VM memory"
                    meta={
                      Object {
                        "active": false,
                        "data": Object {},
                        "dirty": false,
                        "dirtySinceLastSubmit": false,
                        "error": undefined,
                        "initial": false,
                        "invalid": false,
                        "pristine": true,
                        "submitError": undefined,
                        "submitFailed": false,
                        "submitSucceeded": false,
                        "submitting": false,
                        "touched": false,
                        "valid": true,
                        "visited": false,
                      }
                    }
                    offText="No"
                    onText="Yes"
                  >
                    <FinalFormComponent
                      clearable={false}
                      componentType="switch"
                      disabled={false}
                      id="snap_memory"
                      input={
                        Object {
                          "name": "snap_memory",
                          "onBlur": [Function],
                          "onChange": [Function],
                          "onFocus": [Function],
                          "value": false,
                        }
                      }
                      inputColumnSize={8}
                      label="Snapshot VM memory"
                      labelColumnSize={2}
                      labelKey="label"
                      meta={
                        Object {
                          "active": false,
                          "data": Object {},
                          "dirty": false,
                          "dirtySinceLastSubmit": false,
                          "error": undefined,
                          "initial": false,
                          "invalid": false,
                          "pristine": true,
                          "submitError": undefined,
                          "submitFailed": false,
                          "submitSucceeded": false,
                          "submitting": false,
                          "touched": false,
                          "valid": true,
                          "visited": false,
                        }
                      }
                      multi={false}
                      offText="No"
                      onText="Yes"
                      placeholder=""
                      searchable={false}
                      simpleValue={true}
                      validateOnMount={false}
                      valueKey="value"
                    >
                      <FormGroup
                        bsClass="form-group"
                        validationState={null}
                      >
                        <div
                          className="form-group"
                        >
                          <Col
                            bsClass="col"
                            className="control-label"
                            componentClass="label"
                            xs={2}
                          >
                            <label
                              className="control-label col-xs-2"
                            >
                              Snapshot VM memory
                            </label>
                          </Col>
                          <Col
                            bsClass="col"
                            componentClass="div"
                            xs={8}
                          >
                            <div
                              className="col-xs-8"
                            >
                              <Switch
                                animate={true}
                                baseClass="bootstrap-switch"
                                bsSize={null}
                                clearable={false}
                                defaultValue={true}
                                disabled={false}
                                handleWidth="auto"
                                id="snap_memory"
                                inverse={false}
                                label="Snapshot VM memory"
                                labelKey="label"
                                labelText=" "
                                labelWidth="auto"
                                multi={false}
                                name="snap_memory"
                                offColor="default"
                                offText="No"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onColor="primary"
                                onFocus={[Function]}
                                onText="Yes"
                                options={Array []}
                                placeholder=""
                                readonly={false}
                                searchable={false}
                                tristate={false}
                                value={false}
                                valueKey="value"
                                wrapperClass="wrapper"
                              >
                                <div
                                  className="bootstrap-switch wrapper bootstrap-switch-off bootstrap-switch-snap_memory bootstrap-switch-animate"
                                  onBlur={[Function]}
                                  onFocus={[Function]}
                                  onKeyDown={[Function]}
                                  style={
                                    Object {
                                      "width": "auto",
                                    }
                                  }
                                  tabIndex="0"
                                >
                                  <div
                                    className="bootstrap-switch-container"
                                    style={
                                      Object {
                                        "marginLeft": -0,
                                        "width": "auto",
                                      }
                                    }
                                  >
                                    <span
                                      className="bootstrap-switch-handle-on bootstrap-switch-primary"
                                      onClick={[Function]}
                                      style={
                                        Object {
                                          "width": 0,
                                        }
                                      }
                                    >
                                      Yes
                                    </span>
                                    <span
                                      className="bootstrap-switch-label"
                                      onMouseDown={[Function]}
                                      onMouseLeave={[Function]}
                                      onMouseMove={[Function]}
                                      onMouseUp={[Function]}
                                      onTouchEnd={[Function]}
                                      onTouchMove={[Function]}
                                      onTouchStart={[Function]}
                                      style={
                                        Object {
                                          "width": 0,
                                        }
                                      }
                                    >
                                       
                                    </span>
                                    <span
                                      className="bootstrap-switch-handle-off bootstrap-switch-default"
                                      onClick={[Function]}
                                      style={
                                        Object {
                                          "width": 0,
                                        }
                                      }
                                    >
                                      No
                                    </span>
                                  </div>
                                </div>
                              </Switch>
                            </div>
                          </Col>
                        </div>
                      </FormGroup>
                    </FinalFormComponent>
                  </FinalFormSwitch>
                </Field>
              </div>
            </Col>
            <Col
              bsClass="col"
              componentClass="div"
              xs={12}
            >
              <div
                className="col-xs-12"
              >
                <hr />
                <ButtonGroup
                  block={false}
                  bsClass="btn-group"
                  className="pull-right"
                  justified={false}
                  vertical={false}
                >
                  <div
                    className="pull-right btn-group"
                  >
                    <Button
                      active={false}
                      block={false}
                      bsClass="btn"
                      bsStyle="primary"
                      disabled={true}
                      id="snap-form-submit"
                      onClick={[Function]}
                    >
                      <button
                        className="btn btn-primary"
                        disabled={true}
                        id="snap-form-submit"
                        onClick={[Function]}
                        type="button"
                      >
                        Create
                      </button>
                    </Button>
                    <Button
                      active={false}
                      block={false}
                      bsClass="btn"
                      bsStyle="default"
                      disabled={false}
                      id="snap-form-cancel"
                      onClick={[MockFunction]}
                    >
                      <button
                        className="btn btn-default"
                        disabled={false}
                        id="snap-form-cancel"
                        onClick={[MockFunction]}
                        type="button"
                      >
                        Cancel
                      </button>
                    </Button>
                  </div>
                </ButtonGroup>
              </div>
            </Col>
          </div>
        </Row>
      </form>
    </Form>
  </ReactFinalForm>
</VmSnapshotForm>
`;
